2008-09-11  Martyn Russell  <martyn@imendio.com>

	* src/tracker-extract/tracker-extract-imagemagick.c:
	* src/tracker-extract/tracker-extract-mplayer.c: 
 	* src/tracker-extract/tracker-extract-msoffice.c:
	* src/tracker-extract/tracker-extract-oasis.c:
	* src/tracker-extract/tracker-extract-pdf.c: 
	* src/tracker-extract/tracker-extract-totem.c:
	* src/tracker-extract/tracker-extract.[ch]: Code clean up and use
	libtracker-common for functions instead of duplicating them in
	these files.

2008-09-11  Martyn Russell  <martyn@imendio.com>

	* src/tracker-extract/tracker-extract.c: Use the libtracker-common
	spawn function instead of duplicating the code here. Also the
	libtracker-common function has a lot better error handling.

2008-09-11  Martyn Russell  <martyn@imendio.com>

	* src/tracker-extract/Makefile.am: Cleaned up Makefile.

	* src/tracker-extract/tracker-extract.c: Use functions from
	libtracker-common instead of duplicating our own here.
	
	* src/tracker-indexer/tracker-metadata-utils.c:
	(process_watch_cb): Print the g_strerror() for the error code we
	get back from an exiting process from the extractor.

2008-09-11  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-os-dependant-unix.c: Cleaned up
	* src/libtracker-common/tracker-os-dependant.h: 
	functions. Added parameter checks for all public functions. Made
	setrlimit function public since it is used in a lot of places.
	
	* src/libtracker-common/tracker-os-dependant-win.c: Updated this
	* src/libtracker-common/tracker-os-dependant.h: 
	module and wrote functions that were missing.

	* src/tracker-extract/tracker-extract.c:
	* src/tracker-extract/tracker-extract-abw.c:
	* src/tracker-extract/tracker-extract-gstreamer.c:
	* src/tracker-extract/tracker-extract-html.c: 
	* src/tracker-extract/tracker-extract-jpeg.c: 
	* src/tracker-extract/tracker-extract-ps.c: Cleaned up the code
	here. Made a lot of things static which shouldn't be public.
